[gd_scene load_steps=34 format=2]

[ext_resource path="res://Data/Weapons/weapon_axe.png" type="Texture" id=1]
[ext_resource path="res://Data/Player/Idle Sprite Sheet.png" type="Texture" id=2]
[ext_resource path="res://Data/Player/Run Sprite Sheet.png" type="Texture" id=3]
[ext_resource path="res://Data/Player/Climb Sprite Sheet.png" type="Texture" id=4]
[ext_resource path="res://Data/Player/Dash Sprite Sheet.png" type="Texture" id=5]
[ext_resource path="res://Data/Player/Falling Sprite Sheet.png" type="Texture" id=6]
[ext_resource path="res://Objects/Item.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=8]
[ext_resource path="res://Data/Controls/tile_0527.png" type="Texture" id=9]
[ext_resource path="res://Data/Inventory/Inventory Sprite Sheet.png" type="Texture" id=10]
[ext_resource path="res://Data/Hearts-Life/ui_heart_full.png" type="Texture" id=11]
[ext_resource path="res://Scripts/PlayerUI.gd" type="Script" id=12]
[ext_resource path="res://Data/Hearts-Life/ui_heart_empty.png" type="Texture" id=13]
[ext_resource path="res://Data/Controls/tile_0085.png" type="Texture" id=14]
[ext_resource path="res://Data/Controls/tile_0167.png" type="Texture" id=15]
[ext_resource path="res://Data/Controls/tile_0087.png" type="Texture" id=16]
[ext_resource path="res://Data/Controls/joystick.png" type="Texture" id=17]
[ext_resource path="res://Data/Controls/tile_0425.png" type="Texture" id=18]
[ext_resource path="res://Data/Controls/tile_0528.png" type="Texture" id=19]

[sub_resource type="Animation" id=59]
resource_name = "Climb"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimationPlayer:playback_speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=60]
resource_name = "Dash"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimationPlayer:playback_speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3.0 ]
}

[sub_resource type="Animation" id=61]
resource_name = "Fall"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Gun/AnimationPlayer:playback_speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=62]
resource_name = "Idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimationPlayer:playback_speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.6 ]
}

[sub_resource type="Animation" id=63]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=64]
resource_name = "Run"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimationPlayer:playback_speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.9 ]
}

[sub_resource type="Animation" id=65]
resource_name = "Attack"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -70.0, 75.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackArea/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer:playback_speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="RectangleShape2D" id=66]

[sub_resource type="RectangleShape2D" id=67]
extents = Vector2( 6.40002, 10 )

[sub_resource type="RectangleShape2D" id=68]

[sub_resource type="CubeMesh" id=69]

[sub_resource type="RectangleShape2D" id=72]
extents = Vector2( 16, 8 )

[sub_resource type="CubeMesh" id=70]

[sub_resource type="PrismMesh" id=71]

[node name="Player" type="KinematicBody2D"]
position = Vector2( 0, 211 )
scale = Vector2( 1.25, 1.25 )
collision_layer = 14
collision_mask = 15
script = ExtResource( 8 )
item_tscn = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 9.64105e-06, -3.99999 )
texture = ExtResource( 4 )
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Climb = SubResource( 59 )
anims/Dash = SubResource( 60 )
anims/Fall = SubResource( 61 )
anims/Idle = SubResource( 62 )
anims/RESET = SubResource( 63 )
anims/Run = SubResource( 64 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -20 )
current = true
smoothing_enabled = true
smoothing_speed = 3.5

[node name="Gun" type="Position2D" parent="."]
position = Vector2( 0, 2.5 )

[node name="Sprite" type="Sprite" parent="Gun"]
position = Vector2( 0, -0.1 )
texture = ExtResource( 1 )
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Gun"]
anims/Attack = SubResource( 65 )

[node name="AttackArea" type="Area2D" parent="Gun"]
position = Vector2( 14.4, 2.7 )
scale = Vector2( 0.6, 0.6 )
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gun/AttackArea"]
shape = SubResource( 66 )
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4.57764e-05, -7.62939e-06 )
shape = SubResource( 67 )

[node name="RayCastAttack" type="RayCast2D" parent="."]
position = Vector2( 0, 4.5 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 4

[node name="RayCast3" type="RayCast2D" parent="."]
position = Vector2( 6, 0 )
cast_to = Vector2( 0, -13 )

[node name="RayCast4" type="RayCast2D" parent="."]
position = Vector2( -7, 0 )
cast_to = Vector2( 0, -13 )

[node name="ClimbLeft" type="RayCast2D" parent="."]
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 9 )

[node name="ClimbRight" type="RayCast2D" parent="."]
visible = false
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, -9 )

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 12 )

[node name="Inventory" type="Node2D" parent="UI"]
position = Vector2( 10, 5 )
scale = Vector2( 2.5, 2.5 )

[node name="Slot1" type="Sprite" parent="UI/Inventory"]
texture = ExtResource( 10 )
centered = false
hframes = 2
frame = 1

[node name="Touch" type="TouchScreenButton" parent="UI/Inventory/Slot1"]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 68 )
action = "ui_select_item_1"

[node name="Sprite" type="Sprite" parent="UI/Inventory/Slot1"]
position = Vector2( 5, 5 )
rotation = -0.785398
scale = Vector2( 0.4, 0.4 )

[node name="Slot2" type="Sprite" parent="UI/Inventory"]
position = Vector2( 10, 0 )
texture = ExtResource( 10 )
centered = false
hframes = 2
frame = 1

[node name="Sprite" type="Sprite" parent="UI/Inventory/Slot2"]
position = Vector2( 5, 5 )
rotation = -0.785398
scale = Vector2( 0.4, 0.4 )

[node name="Touch" type="TouchScreenButton" parent="UI/Inventory/Slot2"]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 68 )
action = "ui_select_item_2"

[node name="Slot3" type="Sprite" parent="UI/Inventory"]
position = Vector2( 20, 0 )
texture = ExtResource( 10 )
centered = false
hframes = 2

[node name="Sprite" type="Sprite" parent="UI/Inventory/Slot3"]
position = Vector2( 5, 5 )
rotation = -0.785398
scale = Vector2( 0.4, 0.4 )

[node name="Life" type="Node2D" parent="UI"]
position = Vector2( 10, 35 )

[node name="Outline" type="TextureRect" parent="UI/Life"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 13 )
stretch_mode = 2

[node name="Hearts" type="TextureRect" parent="UI/Life"]
margin_bottom = 16.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 2

[node name="Power" type="Node2D" parent="UI"]

[node name="Outline" type="MeshInstance2D" parent="UI/Power"]
position = Vector2( 67.5, 60 )
scale = Vector2( 59.5, 6 )
mesh = SubResource( 69 )

[node name="Bar" type="MeshInstance2D" parent="UI/Power"]
modulate = Color( 0.478431, 0.827451, 0.329412, 1 )
position = Vector2( 67.5, 60 )
scale = Vector2( 57.5, 4 )
mesh = SubResource( 69 )

[node name="Controls" type="Node2D" parent="UI"]
position = Vector2( 0, -50 )
scale = Vector2( 1.5, 1.5 )

[node name="Jump" type="TouchScreenButton" parent="UI/Controls"]
position = Vector2( 280, 130 )
scale = Vector2( 2, 2 )
normal = ExtResource( 18 )
action = "ui_jump"

[node name="Right" type="TouchScreenButton" parent="UI/Controls"]
position = Vector2( 60, 160 )
scale = Vector2( 2, 2 )
normal = ExtResource( 15 )
action = "ui_right"
visibility_mode = 1

[node name="Left" type="TouchScreenButton" parent="UI/Controls"]
position = Vector2( 30, 160 )
scale = Vector2( -2, 2 )
normal = ExtResource( 15 )
action = "ui_left"

[node name="Use" type="TouchScreenButton" parent="UI/Controls"]
position = Vector2( 60, 130 )
scale = Vector2( 2, 2 )
normal = ExtResource( 16 )
action = "ui_interact"

[node name="Dash" type="TouchScreenButton" parent="UI/Controls"]
position = Vector2( 254.667, 160.667 )
scale = Vector2( 2, 2 )
shape = SubResource( 72 )
action = "ui_dash"

[node name="l" type="TextureRect" parent="UI/Controls/Dash"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 9 )
expand = true

[node name="r" type="TextureRect" parent="UI/Controls/Dash"]
margin_left = 16.0
margin_right = 32.0
margin_bottom = 16.0
texture = ExtResource( 19 )
expand = true

[node name="Drop" type="TouchScreenButton" parent="UI/Controls"]
position = Vector2( 0, 130 )
scale = Vector2( 2, 2 )
normal = ExtResource( 14 )
action = "ui_drop_item"

[node name="JoyStick" type="TouchScreenButton" parent="UI/Controls"]
position = Vector2( 270, 79.1667 )
scale = Vector2( 3, 3 )
normal = ExtResource( 17 )

[node name="Arrow" type="MeshInstance2D" parent="UI/Controls/JoyStick"]
position = Vector2( 8, 8 )
mesh = SubResource( 70 )

[node name="Arrow" type="MeshInstance2D" parent="UI/Controls/JoyStick/Arrow"]
modulate = Color( 0.133333, 0.266667, 1, 1 )
position = Vector2( 3.00256, 4.35995e-08 )
rotation = -1.5708
scale = Vector2( 1, 2 )
mesh = SubResource( 71 )

[connection signal="is_dead" from="." to="." method="_on_Player_is_dead"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
